--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   font-family:"Montserrat";
 }
+body{
+  background: #E5E5E5;
+}
 .container{
   position: relative;
   width: 100%;
@@ -19,7 +22,6 @@
   line-height: 20px;
   color: #533738;
 }
-
 .icon {
   position: absolute;
   width: 25px;
@@ -113,4 +115,124 @@ h1 {
 }
 button {
   background: #CC8B86;
+}
+
+/***************** О нас ****************/
+h2 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 50px;
+  text-transform: uppercase;
+  color: #533738;
+}
+.company_page h2{
+  position: absolute;
+  left: 632px;
+  top: 780px;
+}
+.uss {
+  position: absolute;
+  width: 440px;
+  height: 465px;
+  left: 690px;
+  top: 870px;
+}
+.company_page img{
+  position: absolute;
+  width: 440px;
+  height: 450px;
+  left: 182px;
+  top: 870px;
+}
+.figure{
+  position: absolute;
+  width: 1400px;
+  height: 230px;
+  left: 0px;
+  top: 1356px;
+  background: #8D7370;
+}
+.fig{
+  font-size: 36px;
+  line-height: 62px;
+  color: #fff;
+}
+.number-5{
+  position: absolute;
+  width:29px;
+  height: 62px;
+  top: 50px;
+  left: 220px;
+}
+.number-100{
+  position: absolute;
+  width:29px;
+  height: 62px;
+  top: 50px;
+  left: 590px;
+}
+.number-10{
+  position: absolute;
+  width:85px;
+  height: 62px;
+  top: 50px;
+  left: 990px;
+}
+.years {
+  position: absolute;
+  width: 190px;
+  height: 62px;
+  left: 150px;
+  top: 100px;
+}
+.proekt {
+  position: absolute;
+  width: 190px;
+  height: 62px;
+  left: 540px;
+  top: 100px;
+}
+.awards {
+  position: absolute;
+  width: 190px;
+  height: 62px;
+  left: 950px;
+  top: 100px;
+}
+/************* Наши работы *************/
+.portfolio_page h2 {
+  position: absolute;
+  width:332px;
+  height: 50px;
+  top: 1610px;
+  left: 90px;
+}
+.picture{
+  position: absolute;
+  top: 1690px;
+  left: 90px;
+}
+.picture img{
+  max-height: 280px;
+}
+.first {
+  position: absolute;
+  left: 90px;
+  top: 5px ;
+}
+.second{
+  position: absolute;
+  left: 410px;
+  top: 5px ;
+}
+.third{
+  position: absolute;
+  left: 540px;
+  top: 300px ;
+}
+.fourth{
+  position: absolute;
+  left: 90px;
+  top: 300px ;
 }
