--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 body{
   background: #E5E5E5;
+  width: 1260px;
 }
 .container{
   position: relative;
-  width: 100%;
 }
 .head{
-  width: 1270px;
+  width: 1260px;
 }
 .nav {
   position: absolute;
@@ -128,8 +128,8 @@ h2 {
 }
 .company_page h2{
   position: absolute;
-  left: 632px;
-  top: 780px;
+  left: 580px;
+  top: 730px;
 }
 .uss {
   position: absolute;
@@ -147,7 +147,7 @@ h2 {
 }
 .figure{
   position: absolute;
-  width: 1400px;
+  width: 1260px;
   height: 230px;
   left: 0px;
   top: 1356px;
@@ -203,15 +203,34 @@ h2 {
 /************* Наши работы *************/
 .portfolio_page h2 {
   position: absolute;
-  width:332px;
+  width: 332px;
   height: 50px;
   top: 1610px;
-  left: 90px;
+  left: 140px;
+}
+.room {
+  font-size: 24px;
+  text-align: center;
+  color: #fff;
+  position: absolute;
+  height: 111px;
+  width: 270px;
+  top: 1710px;
+  left: 240px;
+}
+.whatroom{
+  font-size: 16px;
+  color: #fff;
+  position: absolute;
+  height: 150px;
+  width: 270px;
+  top: 1790px;
+  left: 240px;
 }
 .picture{
   position: absolute;
   top: 1690px;
-  left: 90px;
+  left: 140px;
 }
 .picture img{
   max-height: 280px;
@@ -235,4 +254,150 @@ h2 {
   position: absolute;
   left: 90px;
   top: 300px ;
+}
+.look{
+  font-size: 30px;
+  position: absolute;
+  left: 520px;
+  top: 2300px;
+}
+/************* Команда *************/
+.team_page{
+  color: #533738;
+  position: absolute;
+  top: 2410px;
+  left: 0px;
+  width: 1260px;
+  height: 1030px;
+  background: #E2C4BA;
+}
+h2{
+  margin: 20px;
+  text-align: center;
+}
+.num{
+  color: #fff;
+  font-size: 30px;
+  position: absolute;
+}
+.text{
+  font-size: 18px;
+  color: #533738;
+}
+#ellips{
+  background: #8D7370;
+  border: 1px solid #8D7370;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: inline-block;
+}
+.girls{
+  position: absolute;
+  left: 150px;
+  top: 120px;
+}
+.girls img{
+  max-height: 200px;
+}
+.foto-1{
+  position: absolute;
+  left: 50px;
+  top: 0px;
+}
+.foto-2{
+  position: absolute;
+  left: 350px;
+  top: 0px;
+}
+.foto-3{
+  position: absolute;
+  left: 650px;
+  top: 0px;
+}
+.text_girl{
+  position: absolute;
+  left: 135px;
+  top: 335px;
+}
+.texxt{
+  width: 270px;
+  text-align: center;
+}
+.text {
+  width: 220px;
+}
+.girl-1{
+  position: absolute;
+  left: 50px;
+  top: 0px;
+}
+.girl-2{
+  position: absolute;
+  left: 350px;
+  top: 0px;
+}
+.girl-3{
+  position: absolute;
+  left: 650px;
+  top: 0px;
+}
+/************* Как мы работаем *************/
+
+.work_page{
+  position: absolute;
+  text-align: center;
+  left: 50px;
+  top: 2980px;
+}
+.work_page h2{
+  position: absolute;
+  width: 450px;
+  height: 50px;
+  top: 0px;
+  left: 340px;
+}
+.blockk{
+  position: absolute;
+  top: 50px;
+}
+.block-1{
+  position: absolute;
+  left: 5px;
+  top: 60px;
+}
+.one {
+  position: absolute;
+  left: 104px;
+  top: 12px;
+}
+.block-2{
+  position: absolute;
+  left: 300px;
+  top: 60px;
+}
+.two {
+  position: absolute;
+  left: 104px;
+  top: 12px;
+}
+.block-3{
+  position: absolute;
+  left: 600px;
+  top: 60px;
+}
+.tree {
+  position: absolute;
+  left: 104px;
+  top: 12px;
+}
+.block-4{
+  position: absolute;
+  left: 900px;
+  top: 60px;
+}
+.four {
+  position: absolute;
+  left: 101px;
+  top: 12px;
 }
