--- a/style.css
+++ b/style.css
@@ -90,8 +90,10 @@ h1 {
 }
 button {
   background: #CC8B86;
+  border: none;
   text-decoration: none;
   padding: 20px;
+  padding-bottom: none;
 }
 
 /***************** О нас ****************/
@@ -123,7 +125,6 @@ h2 {
 }
 .us_img{
   float: left;
-  width: 440px;
   height: 450px;
   margin-left:20px;
 }
@@ -133,7 +134,7 @@ h2 {
   height: 130px;
   background: #8D7370;
   display: grid;
-  grid-template-columns: 350px 350px 350px;
+  grid-template-columns: 300px 300px 300px;
   grid-template-rows: 50px;
   justify-content: center;
 }
@@ -145,60 +146,99 @@ h2 {
 }
 
 /************* Наши работы *************/
-.portfolio_page h2 {
+.portfolio_page h2{
+  text-align: left;
   margin-left: 50px;
   padding: 20px;
 }
 .picture{
   padding: 20px;
+  text-align: center;
 }
 .picture img{
   height: 400px;
+}
+.first{
   position: relative;
+  z-index: -1;
 }
 .studia{
-  margin-top: 20px;
-  width: 100%;
+  padding: 10px;
+  margin-top: -830px;
+  margin-left: 110px;
+  z-index: 1;
 }
 .room {
-  font-size: 24px;
+  font-size: 36px;
   color: #fff;
   height: 111px;
+  text-align: center;
+  width: 390px;
 }
 .whatroom{
-  font-size: 16px;
+  font-size: 21px;
   color: #fff;
   height: 150px;
-  width: 270px;
+  width: 400px;
 }
 .look{
+  margin-top: 580px;
   font-size: 30px;
   text-align: center;
 }
 /************* Команда *************/
-/*.team_page{
+.team_page{
+  margin-top: 100px;
   color: #533738;
-  position: absolute;
-  top: 2410px;
-  left: 0px;
-  width: 1260px;
-  height: 1030px;
   background: #E2C4BA;
+  height: 850px;
 }
 h2{
-  margin: 20px;
+  padding: 50px;
   text-align: center;
+}
+.girls{
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 200px ;
+  justify-content: center;
+}
+.girls img{
+  height: 200px;
+}
+.text_girl{
+  text-align: left;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 100px ;
+  justify-content: center;
+}
+.texxt{
+  width: 270px;
+}
+
+/************* Как мы работаем *************/
+.work_page{
+  text-align: center;
+}
+.blockk{
+  display: grid;
+  grid-template-columns: 250px 250px 250px 250px;
+  grid-template-rows: 100px ;
+  justify-content: center;
 }
 .num{
   color: #fff;
   font-size: 30px;
-  position: absolute;
+  margin-top: -66px;
+  padding: 15px;
 }
 .text{
   font-size: 18px;
   color: #533738;
 }
-#ellips{
+.ellips{
   background: #8D7370;
   border: 1px solid #8D7370;
   border-radius: 50%;
@@ -206,113 +246,98 @@ h2{
   height: 60px;
   display: inline-block;
 }
-.girls{
-  position: absolute;
-  left: 150px;
-  top: 120px;
+/************* Отзывы *************/
+.clients_page {
+  padding: 12px;
 }
-.girls img{
-  max-height: 200px;
+.pic{
+  display: grid;
+  grid-template-columns: 200px;
+  grid-template-rows: 300px 300px;
+  justify-content: center;
 }
-.foto-1{
-  position: absolute;
-  left: 50px;
-  top: 0px;
+.Otz{
+  color: #533738;
+  margin-top: 40px;
+  text-align: left;
+  font-size: 20px;
+  display: grid;
+  grid-template-columns: 300px 300px;
+  grid-template-rows: 500px;
+  justify-content: center;
 }
-.foto-2{
-  position: absolute;
-  left: 350px;
-  top: 0px;
+.elip{
+  background: #CC8B86;
+  border: 1px solid #CC8B86;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: inline-block;
 }
-.foto-3{
-  position: absolute;
-  left: 650px;
-  top: 0px;
+.elipp{
+  display: flex;
+  justify-content: space-between;
+  margin-top: -250px;
 }
-.text_girl{
-  position: absolute;
-  left: 135px;
-  top: 335px;
-}
-.texxt{
-  width: 270px;
+.strelka{
+  margin-top:-5px;
+  color: #fff;
+  font-size: 50px;
   text-align: center;
 }
-.text {
-  width: 220px;
+/***************** Оставить заявку ****************/
+.app_page{
+  margin-top: 295px;
+  background: #8D7370;
+  color: #fff;
+  display: grid;
+  grid-template-columns: 300px 300px;
+  grid-template-rows: 500px;
+  justify-content: space-around;
 }
-.girl-1{
-  position: absolute;
-  left: 50px;
-  top: 0px;
+.app_page h2{
+  margin-top: 30px;
+  width: 460px;
+  padding: 20px;
+  color: #fff;
+  text-align: left;
 }
-.girl-2{
-  position: absolute;
-  left: 350px;
-  top: 0px;
+.tit{
+  font-size: 16px;
+  width: 400px;
+  padding: 5px;
 }
-.girl-3{
-  position: absolute;
-  left: 650px;
-  top: 0px;
+.app_page img{
+  height: 500px;
 }
-/************* Как мы работаем *************/
-
-/*.work_page{
-  position: absolute;
+form{
+  padding: 20px;
+}
+.name{
+  border: none;
+  background: #8D7370;
+  border-bottom-style: outset;
+  border-bottom-width: thin;
+  padding: 12px;
+  font-size: 18px;
+}
+input::placeholder{
+  color: #fff;
+}
+.end{
+  padding:10px;
+}
+.sub{
+  width: 300px;
+}
+footer{
   text-align: center;
-  left: 50px;
-  top: 2980px;
+  color: #533738;
+  background: #E5E5E5;
+  padding: 20px;
+  font-size: 16px;
+  display: grid;
+  grid-template-columns: 200px 450px 350px;
+  grid-template-rows: 20px;
+  justify-content: space-between;
 }
-.work_page h2{
-  position: absolute;
-  width: 450px;
-  height: 50px;
-  top: 0px;
-  left: 340px;
-}
-.blockk{
-  position: absolute;
-  top: 50px;
-}
-.block-1{
-  position: absolute;
-  left: 5px;
-  top: 60px;
-}
-.one {
-  position: absolute;
-  left: 104px;
-  top: 12px;
-}
-.block-2{
-  position: absolute;
-  left: 300px;
-  top: 60px;
-}
-.two {
-  position: absolute;
-  left: 104px;
-  top: 12px;
-}
-.block-3{
-  position: absolute;
-  left: 600px;
-  top: 60px;
-}
-.tree {
-  position: absolute;
-  left: 104px;
-  top: 12px;
-}
-.block-4{
-  position: absolute;
-  left: 900px;
-  top: 60px;
-}
-.four {
-  position: absolute;
-  left: 101px;
-  top: 12px;
-}
-*/
